my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENSHARED/ENSHARED.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENSHARED.dml:15:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENSHARED.dml:17:18: error ENSHARED: conditional session variable x in template b does not belong to the template type
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENSHARED.dml:11:5: declared here
